--- a/index.html
+++ b/index.html
@@ -10,28 +10,8 @@
 <body>
 
   <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
-    <rect x="50" width="200" height="200" style="fill:grey;" />
-    <text x="150" y="125" font-size="60" text-anchor="middle" fill="orange">CJT</text>
-  </svg>
-
-  <!-- <svg width="500" height="550" xmlns="http://www.w3.org/2000/svg">
-    <rect x="250" y="250" width="250" height="250" style="fill:grey;" />
-    <polygon points="250,60 100,400 400,400" style="fill:red;" class="triangle" />
-    <circle cx="250" cy="250" r="125" />
-  </svg> -->
-  <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
-    <polygon heights="100%" width="100%" points="0, 200, 300, 200, 150, 0" fill="blue" />
-    <text x="150" y="125" font-size="60" text-anchor="middle" fill="green">KJL</text>
-  </svg>
-
-  <!-- <svg width="500" height="550" xmlns="http://www.w3.org/2000/svg">
-    <circle cx="250" cy="250" r="125" fill="blue" />
-    <text x="125" y="125" font-size="60" text-anchor="middle">HLT</text>
-  </svg> -->
-
-  <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
-    <circle cx="50%" cy="50%" r="100" height="100%" width="100%" fill="red" />
-    <text x="150" y="125" font-size="60" text-anchor="middle" fill="blue">HLT</text>
+    <polygon height="100%" width="100%" points="0, 200, 300, 200, 150, 0" fill="orange" />
+    <text x="150" y="125" font-size="60" text-anchor="middle" fill="purple">HLT</text>
   </svg>
 
 
