--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
   <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
-    <polygon height="100%" width="100%" points="0, 200, 300, 200, 150, 0" fill="orange" />
-    <text x="150" y="125" font-size="60" text-anchor="middle" fill="purple">HLT</text>
+    <rect x="50" width="200" height="200" fill="blue" />
+    <text x="150" y="125" font-size="60" text-anchor="middle" fill="HLT">purple</text>
   </svg>
 
 
