--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+  <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
+    <circle cx="50%" cy="50%" r="100" height="100%" width="100%" fill="purple" />
+    <text x="150" y="125" font-size="60" text-anchor="middle" fill="orange">HLT</text>
+  </svg>
 
   <script src="index.js"></script>
 </body>
