--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" width="300" height="200">
-    <circle cx="50%" cy="50%" r="100" height="100%" width="100%" fill="purple" />
-    <text x="150" y="125" font-size="60" text-anchor="middle" fill="orange">HLT</text>
+    <polygon height="100%" width="100%" points="0, 200, 300, 200, 150, 0" fill="red" />
+    <text x="150" y="125" font-size="60" text-anchor="middle" fill="black">DLT</text>
   </svg>
 
   <script src="index.js"></script>
